# this Makefile shows how to build the examples if using
# opam/ocamlfind; type make -f Makefile.opam to use this Makefile
SHELL=bash

# require that p3 has been installed via opam, p3gen.native is
# available and p3.cmxa is accessible via ocamlfind
MAINGEN=p3gen.native
LIBP3=p3.cmxa

all: test

# working tests:
NATIVES=disambiguate.native arith.native arith2.native arith3.native g.native length.native ml2.native ocaml.native

test: $(NATIVES)
	./arith.native -f arith.txt
	./arith2.native -f arith2.txt
	./arith3.native -f arith3.txt
	./disambiguate.native -f disambiguate.txt
	./g.native -f g.g
	./length.native -f length.txt
	./ml2.native -f ml2.txt
	./ocaml.native -f ocaml.txt

%.native: %.ml
	ocamlbuild -use-ocamlfind -pkgs p3 $*.native	

%.ml: %.g 
	$(MAINGEN) -g $< >$*.ml

clean: FORCE
	ocamlbuild -clean
	rm -f {arith,arith2,arith3,bracket,disambiguate,excel,g,length,ml,ml2,ocaml,xmlprsr}.{cmi,cmx,ml,o,native}


.PRECIOUS: %.ml

FORCE: